2.00  Fix broken tests
      Add quality tests
      Move to Module::Install
      Improve documentation
      Switch to HTML5 entities

1.01  Yet Another CPAN Release